Assignment/assignment2/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /media/edisc/DATA/MinhLong/MT-183/_2020/HK201/PPL/Assignments/assignment2/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'&&'", "'||'", "'+'", "'+.'", "'-'", "'-.'", "'*'", 
                     "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'EndDo'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "'.'", 
                     "','", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMENT", "IDENT", "BODY", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", 
                      "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "ENDDO", "FLOAT_LIT", 
                      "INT_LIT", "BOOL_LIT", "STRING_LIT", "LCURLY", "RCURLY", 
                      "LR", "RR", "LB", "RB", "SEMI", "DOT", "COMMA", "COLON", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_glo_var_decl_part = 1
    RULE_var_decl = 2
    RULE_variable_list_decl = 3
    RULE_variable_decl = 4
    RULE_init_value = 5
    RULE_literal = 6
    RULE_bktype = 7
    RULE_primitive_type = 8
    RULE_compound_type = 9
    RULE_func_decl_part = 10
    RULE_func_decl = 11
    RULE_func_name = 12
    RULE_param_list = 13
    RULE_func_param_decl = 14
    RULE_statement_list = 15
    RULE_var_decl_statement = 16
    RULE_assign_statement = 17
    RULE_if_statement = 18
    RULE_else_if_part = 19
    RULE_else_part = 20
    RULE_for_statement = 21
    RULE_while_statement = 22
    RULE_do_while_statement = 23
    RULE_break_statement = 24
    RULE_continue_statement = 25
    RULE_call_statement = 26
    RULE_param_func_call = 27
    RULE_return_statement = 28
    RULE_variable_list = 29
    RULE_variable = 30
    RULE_scal_var = 31
    RULE_comp_var = 32
    RULE_expression = 33
    RULE_exp1 = 34
    RULE_exp2 = 35
    RULE_exp3 = 36
    RULE_exp4 = 37
    RULE_exp5 = 38
    RULE_exp6 = 39
    RULE_exp7 = 40
    RULE_name_index_op = 41
    RULE_operand = 42
    RULE_index_operator = 43
    RULE_func_call_expr = 44
    RULE_array = 45
    RULE_arr_elem_list = 46
    RULE_arr_elem = 47

    ruleNames =  [ "program", "glo_var_decl_part", "var_decl", "variable_list_decl", 
                   "variable_decl", "init_value", "literal", "bktype", "primitive_type", 
                   "compound_type", "func_decl_part", "func_decl", "func_name", 
                   "param_list", "func_param_decl", "statement_list", "var_decl_statement", 
                   "assign_statement", "if_statement", "else_if_part", "else_part", 
                   "for_statement", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "call_statement", 
                   "param_func_call", "return_statement", "variable_list", 
                   "variable", "scal_var", "comp_var", "expression", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "name_index_op", 
                   "operand", "index_operator", "func_call_expr", "array", 
                   "arr_elem_list", "arr_elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    COMMENT=25
    IDENT=26
    BODY=27
    BREAK=28
    CONTINUE=29
    DO=30
    ELSE=31
    ELSEIF=32
    ENDBODY=33
    ENDIF=34
    ENDFOR=35
    ENDWHILE=36
    FOR=37
    FUNCTION=38
    IF=39
    PARAMETER=40
    RETURN=41
    THEN=42
    VAR=43
    WHILE=44
    ENDDO=45
    FLOAT_LIT=46
    INT_LIT=47
    BOOL_LIT=48
    STRING_LIT=49
    LCURLY=50
    RCURLY=51
    LR=52
    RR=53
    LB=54
    RB=55
    SEMI=56
    DOT=57
    COMMA=58
    COLON=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    UNTERMINATED_COMMENT=62
    WS=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def glo_var_decl_part(self):
            return self.getTypedRuleContext(BKITParser.Glo_var_decl_partContext,0)


        def func_decl_part(self):
            return self.getTypedRuleContext(BKITParser.Func_decl_partContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.glo_var_decl_part()
            self.state = 97
            self.func_decl_part()
            self.state = 98
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glo_var_decl_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_glo_var_decl_part




    def glo_var_decl_part(self):

        localctx = BKITParser.Glo_var_decl_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_glo_var_decl_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 100
                self.var_decl()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list_decl(self):
            return self.getTypedRuleContext(BKITParser.Variable_list_declContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BKITParser.VAR)
            self.state = 107
            self.match(BKITParser.COLON)
            self.state = 108
            self.variable_list_decl()
            self.state = 109
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_list_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_list_decl




    def variable_list_decl(self):

        localctx = BKITParser.Variable_list_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_list_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.variable_decl()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 112
                self.match(BKITParser.COMMA)
                self.state = 113
                self.variable_decl()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(BKITParser.IDENT, 0)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LB)
            else:
                return self.getToken(BKITParser.LB, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RB)
            else:
                return self.getToken(BKITParser.RB, i)

        def init_value(self):
            return self.getTypedRuleContext(BKITParser.Init_valueContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_decl




    def variable_decl(self):

        localctx = BKITParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKITParser.IDENT)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LB:
                self.state = 120
                self.match(BKITParser.LB)
                self.state = 121
                self.match(BKITParser.INT_LIT)
                self.state = 122
                self.match(BKITParser.RB)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.T__0:
                self.state = 128
                self.match(BKITParser.T__0)
                self.state = 129
                self.init_value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_value




    def init_value(self):

        localctx = BKITParser.Init_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_init_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bktype(self):
            return self.getTypedRuleContext(BKITParser.BktypeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.bktype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BktypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(BKITParser.Primitive_typeContext,0)


        def compound_type(self):
            return self.getTypedRuleContext(BKITParser.Compound_typeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_bktype




    def bktype(self):

        localctx = BKITParser.BktypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bktype)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FLOAT_LIT, BKITParser.INT_LIT, BKITParser.BOOL_LIT, BKITParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.primitive_type()
                pass
            elif token in [BKITParser.LCURLY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.compound_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def BOOL_LIT(self):
            return self.getToken(BKITParser.BOOL_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_primitive_type




    def primitive_type(self):

        localctx = BKITParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.INT_LIT) | (1 << BKITParser.BOOL_LIT) | (1 << BKITParser.STRING_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_compound_type




    def compound_type(self):

        localctx = BKITParser.Compound_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compound_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.array()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decl_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl_part




    def func_decl_part(self):

        localctx = BKITParser.Func_decl_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_decl_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 144
                self.func_decl()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def func_name(self):
            return self.getTypedRuleContext(BKITParser.Func_nameContext,0)


        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(BKITParser.FUNCTION)
            self.state = 151
            self.match(BKITParser.COLON)
            self.state = 152
            self.func_name()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 153
                self.match(BKITParser.PARAMETER)
                self.state = 154
                self.match(BKITParser.COLON)
                self.state = 155
                self.param_list()


            self.state = 158
            self.match(BKITParser.BODY)
            self.state = 159
            self.match(BKITParser.COLON)
            self.state = 160
            self.statement_list()
            self.state = 161
            self.match(BKITParser.ENDBODY)
            self.state = 162
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(BKITParser.IDENT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_name




    def func_name(self):

        localctx = BKITParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(BKITParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_param_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_param_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_param_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_list




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.func_param_decl()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 167
                self.match(BKITParser.COMMA)
                self.state = 168
                self.func_param_decl()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(BKITParser.IDENT, 0)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LB)
            else:
                return self.getToken(BKITParser.LB, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RB)
            else:
                return self.getToken(BKITParser.RB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_func_param_decl




    def func_param_decl(self):

        localctx = BKITParser.Func_param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_param_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(BKITParser.IDENT)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LB:
                self.state = 175
                self.match(BKITParser.LB)
                self.state = 176
                self.match(BKITParser.INT_LIT)
                self.state = 177
                self.match(BKITParser.RB)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_decl_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_decl_statementContext,i)


        def assign_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Assign_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Assign_statementContext,i)


        def if_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.If_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.If_statementContext,i)


        def for_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.For_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.For_statementContext,i)


        def while_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.While_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.While_statementContext,i)


        def do_while_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Do_while_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Do_while_statementContext,i)

